--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "dice-chess-mono",
-    "version": "0.5.0",
-    "private": true,
+   "name": "dice-chess-mono",
+   "version": "0.5.0",
+   "private": true,
+   "homepage": "https://sunpowderdev.github.io",
     "dependencies": {
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
