--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "dice-chess-mono",
    "version": "0.5.0",
    "private": true,
-   "homepage": "https://sunpowderdev.github.io",
+   "homepage": "https://sunpowderdev.github.io/Dice_Chess_Project",
     "dependencies": {
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
